--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-charts": "^7.1.0",
+    "@mui/x-charts": "^7.3.2",
     "@mui/x-data-grid": "^7.1.1",
     "@mui/x-data-grid-generator": "^7.1.1",
     "@mui/x-date-pickers": "^7.1.0",
@@ -30,7 +30,7 @@
     "react-multi-select-component": "^4.3.4",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "sass": "^1.72.0",
     "sheetjs-style": "^0.15.8",
