--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.2",
     "file-saver": "^2.0.5",
     "firebase": "^10.10.0",
     "fs": "^0.0.1-security",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-icons": "^5.0.1",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-multi-select-component": "^4.3.4",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
